# combinatorics

./: README.md  pyproject.toml
combinatorics/: compositions.py  dependent_product.py  integer.py  pareto.py  permutation.py  primes.py  series.py  splitter.py
combinatorics/search/: better_sa.py  simulated_annealing.py
tests/: test_compositions.py  test_dependent_product.py  test_integer_compositions.py  test_pareto.py  test_permutation.py  test_prime_factorization.py  test_splitter.py
