[project]
name = "combinatorics"
version = "0.1"
authors = [
    { name="Michael Gilbert", email="gilbertm@mit.edu" }
]
description = "Combinatorics functions useful for writing a mapper."
readme = "README.md"
requires-python = ">3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"